# Reliability-in-Agentic-AI

./: .gitignore  A2A_CONTRIBUTION_DRAFT.md  ARCHITECTURE_TECHNICAL_DESCRIPTION.md  DEPLOYMENT_ANALYSIS.md  Dockerfile  README.md  REFACTORING_ANALYSIS.md  RL_TRAINING_DATA_GENERATION.md  SETUP.md  STPA_ANALYSIS.md  THESIS_VERIFICATION_REPORT.md  deploy_all.py  verify_agent_card.py  verify_refactor.py  verify_safety.py
adk_hello_world/: main.py
financial-advisor/: .gitignore  README.md  adk_app.py  agent.json  agent.json.sig  demo_governance.py  pyproject.toml  run_agent.py
financial-advisor/financial_advisor/: agent.py
financial-advisor/financial_advisor/sub_agents/: safety.py
financial-advisor/financial_advisor/sub_agents/data_analyst/: agent.py
financial-advisor/financial_advisor/sub_agents/execution_analyst/: agent.py
financial-advisor/financial_advisor/sub_agents/trading_analyst/: agent.py
financial-advisor/financial_advisor/tools/: risk_tools.py  router.py
financial-advisor/financial_advisor/utils/: logging_config.py  mcs_client.py  r2a2_client.py
financial-advisor/tests/: test_agents.py  test_router.py
finguard/: README.md  main.py  requirements.txt  structure.md
finguard/agents/: compliance.py  coordinator.py  executor.py  quant.py  researcher.py
finguard/deploy/: .dockerignore  Dockerfile  deploy_all.py
finguard/governance/: policy_engine.py  semantic_guard.py
finguard/policies/: trade.rego
finguard/tools/: compliance.py  execution.py  quant.py  router.py  search.py
metacognitive_control_subsystem/: README.md  policy.json  train.py
metacognitive_control_subsystem/mcs/api/: schemas.py  server.py
metacognitive_control_subsystem/sofai_lm/: correctness.py  metacognitive_controller.py  solvers.py
metacognitive_control_subsystem/tests/: test_agent_guard.py  test_api.py  test_guardrails.py  test_reflective_engine.py
observability/: pyproject.toml
observability/financial_observability.egg-info/: PKG-INFO  SOURCES.txt
observability/observability/: __init__.py  logging_config.py  telemetry.py
r2a2_safety_subsystem/: .gitignore
r2a2_safety_subsystem/tests/: test_actuator.py  test_api.py  test_belief_memory.py  test_constraint_filter.py  test_introspective_reflection.py  test_perceiver.py  test_reasoning_planner.py  test_risk_aware_world_model.py
scripts/: setup_gcp_zsp.sh
tests/: test_capstone_gauntlet.py
vacp/: __init__.py  agent_guard.py  ans.py  audit.py  c2pa.py  card_loader.py  ecbf.py  gateway.py  gcp_identity.py  goa.py  governed_agent.py  guards.py  interfaces.py  janus.py  policy.py  processor.py  reviewer.py  schemas.py  state_manager.py  system4.py  ucf.py
vacp/tests/: test_ecbf_hedge_fund.py  test_gateway_integration.py  test_refactor.py  test_vacp.py
(+18 files in other folders)
